--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,7 @@ input[type="text"] {
   padding: 10px;
   border: 2px solid hsla(0, 0, 80%, 0.5);
   color: hsla(0, 0, 0, 0.5);
+  width: 20rem;
 }
 ol {
   padding: 0;
@@ -84,4 +85,59 @@ li {
   padding: 8px 12px;
   font-size: 1.4rem;
   margin-left: 10px;
+}
+
+@media screen and (max-width: 500px) {
+
+  h1{
+    font-size: 3rem;
+  }
+
+  li {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .btn-container {
+    display: flex;
+  }
+
+  button{
+    max-width: 10rem;
+    justify-self: center;
+  }
+
+  input[type="text"] {
+    padding-left: 5px;
+    margin: 0 1rem;
+    width: 15rem;
+  }
+}
+
+@media screen and (max-width: 350px) {
+
+  span{
+    font-size: 1.75rem;
+  }  
+
+  h1{
+    font-size: 2.5rem;
+  }
+
+  input[type="text"] {
+        width: 11rem;
+  }
+
+  ::placeholder{
+    font-size: 1.4rem;
+  }
+  button{
+    font-size: 1.2rem;
+  }
+
+    .delete-button,
+    .move-button {
+      margin-left: 3px;
+          font-size: 1.2rem;
+    }
 }
