--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,19 @@ li {
   margin-left: 10px;
 }
 
+.consent-notification {
+  background-color: hsla(0, 0%, 20%);
+  color: white;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  padding: 50px;
+  border-radius: 10px;
+  margin-top: 100px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .consent-notification p {
   font-size: 2rem;
   margin-bottom: 30px;
